# tree-sitter-shosts

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file.shosts  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-shosts.h  tree-sitter-shosts.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_shosts/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterShostsTests/: TreeSitterShostsTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
