[package]
name = "tree-sitter-shosts"
description = "Smart Hosts file"
version = "0.1.0"
authors = ["Jade Lin <linw1995@icloud.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "shosts"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/smart-hosts"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
